<resources>
    <string name="app_name">GroupFuel</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Log out</string>
    <string name="login_or_register">Please log in or register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fueling_top_text">Please enter fueling details</string>
    <string name="fueling_title">Fuel now</string>
    <string name="settings_title">Settings</string>
    <string name="usage_title">My Usage</string>
    <string name="login_error_title">Log In Operation Failed</string>
    <string name="signup_error_title">Sign Up Operation Failed</string>
    <string name="wait">Please Wait</string>
    <string name="login_progress">Logging you in&#8230;</string>
    <string name="signup_progress">Registering you&#8230;</string>
    <string name="fueling_progress">Updating fueling&#8230;</string>
    <string name="personal_progress">Updating personal data&#8230;</string>
    <string name="addcar_progress">Adding car&#8230;</string>
    <string name="ok">OK</string>
    <string name="username_empty">"Username is empty"</string>
    <string name="password_empty">"Password is empty"</string>
    <string name="title_activity_add_car">AddCarActivity</string>
    <string name="please_select">Please Select</string>
	<string name="passwords_diff">Passwords are not identical</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="change_password">Change password</string>
    <string name="change_notifications">Change notification settings</string>
    <string name="manage_cars">Manage Cars</string>
    <string name="change_personal">Change personal settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_update">Please Update personal information</string>
    <string name="birth_date">Date of Birth</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="fueling_updated">Fueling updated</string>
    <string name="amount_empty">Cannot fuel with empty amount</string>
    <string name="price_empty">Cannot fuel for free (price 0)</string>
    <string name="mileage_empty">Cannot fuel with empty mileage</string>
    <string name="please_enter">Please enter the details below</string>
    <string name="car_number">Car Number</string>
    <string name="car_number_example">example: 99&#8211;384&#8211;06</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="engine">Engine</string>
    <string name="year">Year</string>
    <string name="gear">Gear type</string>
    <string name="fuel">Fuel type</string>
    <string name="hybrid">Hybrid</string>
    <string name="add_new">Add new</string>
    <string name="add_new_car">Add new car</string>
    <string name="remove_selected">Remove selected</string>
    <string name="enter_login">Please enter login details</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_again">Password (again)</string>
    <string name="enter_register">Please choose Username and Password</string>
    <string name="facebook_app_id">1652222931676093</string>
    <string name="link_facebook">Link Facebook account</string>
    <string name="starting_mileage">Starting Mileage</string>
    <string name="total_price">Total Price</string>
    <string name="num_of_events">num Of Events</string>
    <string name="current_mileage">Current Kilometerage</string>
    <string name="total_amount">Total Amount</string>
    <string name="no_cars">No ownedCars found</string>
    <string name="add_car_q">You need at least one car to access this function. Would you want to add one now?</string>
    <string name="me"><b><i>Me</i></b></string>
</resources>
