<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:id="@+id/displayTable">
    <TableRow
        android:id="@+id/usage_title_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/car_number"
            android:gravity="right"
            android:padding="3dip" />

        <TextView
            android:text="@string/total_price"
            android:gravity="right"
            android:padding="3dip" />

        <TextView
            android:text="@string/total_amount"
            android:gravity="right"
            android:padding="3dip" />

        <TextView
            android:text="@string/starting_mileage"
            android:gravity="right"
            android:padding="3dip" />

        <TextView
            android:text="@string/current_mileage"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>

</TableLayout>