<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.mty.groupfuel.AddCarActivity">

        <TextView
            android:id="@+id/add_car_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="@string/please_enter"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/add_car_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mileage_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/add_car_title"
            android:layout_toLeftOf="@+id/add_car_number"
            android:layout_toStartOf="@+id/add_car_number"
            android:gravity="center_vertical"
            android:text="@string/car_number" />

        <EditText
            android:id="@+id/add_car_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/add_car_title"
            android:layout_toEndOf="@+id/mileage_text"
            android:layout_toRightOf="@+id/mileage_text"
            android:hint="@string/car_number_example"
            android:inputType="number" />

        <TextView
            android:id="@+id/mileage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mileage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/add_car_number"
            android:gravity="center_vertical"
            android:text="@string/current_mileage" />

        <EditText
            android:id="@+id/mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/add_car_maker"
            android:layout_alignRight="@+id/add_car_maker"
            android:layout_below="@+id/add_car_number"
            android:layout_toRightOf="@+id/mileage_text"
            android:hint="40,000 km"
            android:inputType="number"
            android:paddingLeft="5dp" />

        <TextView
            android:id="@+id/add_car_maker_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add_car_maker"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/add_car_maker"
            android:layout_toLeftOf="@+id/add_car_maker"
            android:layout_toStartOf="@+id/add_car_maker"
            android:gravity="center_vertical"
            android:text="@string/maker" />

        <Spinner
            android:id="@+id/add_car_maker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/mileage_text"
            android:layout_toRightOf="@+id/mileage_text"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/add_car_model_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add_car_model"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/add_car_model"
            android:layout_toLeftOf="@+id/add_car_model"
            android:layout_toStartOf="@+id/add_car_model"
            android:gravity="center_vertical"
            android:text="@string/model" />

        <Spinner
            android:id="@+id/add_car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/add_car_maker"
            android:layout_alignStart="@+id/add_car_maker"
            android:layout_below="@+id/add_car_maker"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/add_car_year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add_car_year"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/add_car_engine_text"
            android:layout_toLeftOf="@+id/add_car_engine"
            android:layout_toStartOf="@+id/add_car_engine"
            android:gravity="center_vertical"
            android:text="@string/year" />

        <Spinner
            android:id="@+id/add_car_engine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/add_car_model"
            android:layout_alignStart="@+id/add_car_model"
            android:layout_below="@+id/add_car_model"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/add_car_engine_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/add_car_year"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/add_car_engine"
            android:layout_toLeftOf="@+id/add_car_engine"
            android:layout_toStartOf="@+id/add_car_engine"
            android:gravity="center_vertical"
            android:text="@string/engine" />

        <Spinner
            android:id="@+id/add_car_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_car_engine"
            android:layout_toEndOf="@+id/add_car_engine_text"
            android:layout_toRightOf="@+id/add_car_engine_text"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/add_car_gear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add_car_gear"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/add_car_gear"
            android:layout_toLeftOf="@+id/add_car_gear"
            android:layout_toStartOf="@+id/add_car_gear"
            android:gravity="center_vertical"
            android:text="@string/gear" />

        <Spinner
            android:id="@+id/add_car_gear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/add_car_year"
            android:layout_alignStart="@+id/add_car_year"
            android:layout_below="@+id/add_car_year"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/add_car_fuel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/add_car_hybrid_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/add_car_fuel"
            android:layout_toLeftOf="@+id/add_car_gear"
            android:layout_toStartOf="@+id/add_car_gear"
            android:gravity="center_vertical"
            android:text="@string/fuel" />

        <Spinner
            android:id="@+id/add_car_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/add_car_gear"
            android:layout_alignStart="@+id/add_car_gear"
            android:layout_below="@+id/add_car_gear"
            android:layout_toEndOf="@+id/add_car_fuel_text"
            android:layout_toRightOf="@+id/add_car_fuel_text"
            android:spinnerMode="dropdown" />


        <TextView
            android:id="@+id/add_car_hybrid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add_car_hybrid"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/add_car_fuel"
            android:layout_toLeftOf="@+id/add_car_fuel"
            android:layout_toStartOf="@+id/add_car_fuel"
            android:gravity="center_vertical"
            android:text="@string/hybrid" />

        <CheckBox
            android:id="@+id/add_car_hybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/add_car_fuel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/add_car_fuel"
            android:layout_below="@+id/add_car_fuel"
            android:checked="false"
            android:text="@string/hybrid" />

        <Button
            android:id="@+id/add_car_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/add_car_hybrid"
            android:layout_centerHorizontal="true"
            android:text="@string/add_new" />

    </RelativeLayout>
</ScrollView>